fdo#74325: Write unit test for cell note export to ods.

Change-Id: Ic145781a6c2d7fefb4e80b3a84735e0fb505b0e7