sc/inc/document.hxx
@@ -902,7 +902,7 @@ public:
     SC_DLLPUBLIC ScPostIt*       GetNote(SCCOL nCol, SCROW nRow, SCTAB nTab);
     void                         SetNote(const ScAddress& rPos, ScPostIt* pNote);
     void                         SetNote(SCCOL nCol, SCROW nRow, SCTAB nTab, ScPostIt* pNote);
-    bool                         HasNote(const ScAddress& rPos);
+    SC_DLLPUBLIC bool HasNote(const ScAddress& rPos);
     bool                         HasNote(SCCOL nCol, SCROW nRow, SCTAB nTab);
     SC_DLLPUBLIC bool            HasColNotes(SCCOL nCol, SCTAB nTab);
     SC_DLLPUBLIC bool            HasTabNotes(SCTAB nTab);
